涉及模块：并发编程-模式篇 提交说明：同步模式之线程顺序控制

--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -457,6 +457,93 @@ public class Test24GuardObject {
 
 **主线程创建了三个people，也即创建了三个线程、三个mail对象，三个线程加的是三把不同的锁对象**
 
+#### 同步模式之顺序控制
+
+固定运行顺序，比如，必须先 2 后 1 打印
+
+##### wait notify 版
+
+```java
+/**
+ * @author: lucas.zhao@kuhantech.com
+ * @date: 2021/6/26 11:50
+ * @description:
+ * 两个线程：一个线程打印1，第二个线程打印2，现在要求：必须先打印2，再打印1
+ * 要求：使用wait notify解决
+ * 抽象模型：线程之间的调度
+ */
+@Slf4j(topic = "WaiNotify")
+public class Test37WaiNotify {
+
+    private static final Object lock = new Object();
+
+    private static boolean flag = false;
+
+    public static void main(String[] args) {
+        Thread thread1 = new Thread(() -> {
+            synchronized (lock) {
+                log.info("判断线程1条件执行是否成立：{}", flag);
+                while (!flag) {
+                    try {
+                        log.info("执行条件不成立，进入等待状态");
+                        lock.wait();
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
+                log.info("条件成立，继续执行");
+                log.info("1");
+            }
+        });
+        Thread thread2 = new Thread(() -> {
+            synchronized (lock) {
+                log.info("2");
+                log.info("调度线程1");
+                flag = true;
+                lock.notify();
+            }
+        });
+        thread1.start();
+        thread2.start();
+    }
+}
+```
+
+```java
+12:06:59.207 [Thread-0] INFO WaiNotify - 判断线程1条件执行是否成立：false
+12:06:59.210 [Thread-0] INFO WaiNotify - 执行条件不成立，进入等待状态
+12:06:59.210 [Thread-1] INFO WaiNotify - 2
+12:06:59.210 [Thread-1] INFO WaiNotify - 调度线程1，往下执行
+12:06:59.210 [Thread-0] INFO WaiNotify - 条件成立，继续执行
+12:06:59.210 [Thread-0] INFO WaiNotify - 1
+```
+
+#####  Park Unpark 版
+
+```java
+@Slf4j(topic = "WaiNotify")
+public class Test37ParkUnpark {
+
+    public static void main(String[] args) {
+        Thread thread1 = new Thread(() -> {
+            LockSupport.park();
+            log.info("1");
+        });
+        Thread thread2 = new Thread(() -> {
+            log.info("2");
+            LockSupport.unpark(thread1);
+        });
+        thread1.start();
+        thread2.start();
+    }
+}
+```
+
+```java
+12:19:40.778 [Thread-1] INFO WaiNotify - 2
+12:19:40.781 [Thread-0] INFO WaiNotify - 1
+```
+
 #### 异步模式之生产者/消费者模型
 
 ##### 定义
