涉及模块：并发编程-模式篇 提交说明：同步模式之线程顺序控制 Wait&Notify版本

--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -1,4 +1,4 @@
-#### 两阶段终止线程模式
+### 两阶段终止线程模式
 
 ##### 问题描述
 
@@ -91,7 +91,7 @@ java.lang.InterruptedException: sleep interrupted
 12:22:43.014 [Thread-0] INFO TwoPhaseTermination - 监控线程被打断，料理后事，正常退出...
 ```
 
-#### 同步模式之保护性暂停
+### 同步模式之保护性暂停
 
 ##### 定义
 
@@ -457,9 +457,11 @@ public class Test24GuardObject {
 
 **主线程创建了三个people，也即创建了三个线程、三个mail对象，三个线程加的是三把不同的锁对象**
 
-#### 同步模式之顺序控制
+### 同步模式之线程顺序控制（线程调度）
 
-固定运行顺序，比如，必须先 2 后 1 打印
+#### 固定运行顺序
+
+必须先 2 后 1 打印
 
 ##### wait notify 版
 
@@ -544,7 +546,74 @@ public class Test37ParkUnpark {
 12:19:40.781 [Thread-0] INFO WaiNotify - 1
 ```
 
-#### 异步模式之生产者/消费者模型
+#### 多个线程之间交替输出
+
+线程1输出A 5次，线程2输出B 5次，线程3输出C 5次
+
+最终的输出结果如下：ABCABCABCABCABC
+
+##### Wait&Notify版本
+
+```java
+@Slf4j(topic = "WaiNotify")
+public class Test38WaiNotify {
+
+    public static void main(String[] args) {
+        WaitNotify waitNotify = new WaitNotify(1, 3);
+        new Thread(() -> {waitNotify.print("a", 1, 2);}).start();
+        new Thread(() -> {waitNotify.print("b", 2, 3);}).start();
+        new Thread(() -> {waitNotify.print("c", 3, 1);}).start();
+    }
+}
+
+
+/**
+ * 输出内容         执行标记        下一个标记
+ * a                1              2
+ * b                2              3
+ * c                3              1
+ */
+class WaitNotify {
+    private int flag;
+
+    private int loopNumber;
+
+    public WaitNotify(int flag, int loopNumber) {
+        this.flag = flag;
+        this.loopNumber = loopNumber;
+    }
+
+    /**
+     * @param content 输出内容
+     * @param flag 当前线程执行所需要的flag标记
+     * @param nextFlag 下一个线程执行所需要的标记
+     */
+    public void print(String content, int flag, int nextFlag) {
+        for (int i = 0; i < loopNumber; i++) {
+            synchronized (this) {
+                while (this.flag != flag) {
+                    try {
+                        this.wait();
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
+                System.out.print(content);
+                this.flag = nextFlag;
+                this.notifyAll();
+            }
+        }
+    }
+}
+```
+
+```java
+abcabcabc
+```
+
+
+
+### 异步模式之生产者/消费者模型
 
 ##### 定义
 
