涉及模块：并发编程-模式篇 提交说明：同步模式之线程顺序控制 Await&Signal版本

--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -611,7 +611,61 @@ class WaitNotify {
 abcabcabc
 ```
 
+##### Await&Signal版本
 
+```java
+public class Test39AwaitSignal {
+    public static void main(String[] args) throws InterruptedException {
+        AwaitSignal awaitSignal = new AwaitSignal(5);
+        // 线程1休息室
+        Condition aCondition = awaitSignal.newCondition();
+        // 线程2休息室
+        Condition bCondition = awaitSignal.newCondition();
+        // 线程3休息室
+        Condition cCondition = awaitSignal.newCondition();
+        new Thread(() -> {awaitSignal.print("a", aCondition, bCondition);}).start();
+        new Thread(() -> {awaitSignal.print("b", bCondition, cCondition);}).start();
+        new Thread(() -> {awaitSignal.print("c", cCondition, aCondition);}).start();
+
+        TimeUnit.SECONDS.sleep(1);
+        awaitSignal.lock();
+        try {
+            aCondition.signal();
+        } finally {
+            awaitSignal.unlock();
+        }
+    }
+}
+
+class AwaitSignal extends ReentrantLock {
+
+    private int loopNumber;
+
+    public AwaitSignal(int loopNumber) {
+        this.loopNumber = loopNumber;
+    }
+
+    /**
+     * @param content 要输出的内容
+     * @param currentCondition 当前线程的条件变量
+     * @param nextCondition 下一个线程的条件变量
+     */
+    public void print(String content, Condition currentCondition, Condition nextCondition) {
+        for (int i = 0; i < loopNumber; i++) {
+            lock();
+            try {
+                currentCondition.await();
+                System.out.print(content);
+                nextCondition.signal();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            } finally {
+              unlock();
+            }
+        }
+    }
+}
+```
 
 ### 异步模式之生产者/消费者模型
 
