涉及模块：并发编程-模式篇 提交说明：同步模式之线程顺序控制 Park&Unpark版本

--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -667,6 +667,45 @@ class AwaitSignal extends ReentrantLock {
 }
 ```
 
+##### Park&Unpark版本
+
+```java
+public class Test39ParkUnpark {
+
+    private static Thread t1;
+    private static Thread t2;
+    private static Thread t3;
+    public static void main(String[] args) {
+        ParkUnpark parkUnpark = new ParkUnpark(3);
+
+        t1 = new Thread(() -> parkUnpark.print("a", t2));
+        t2 = new Thread(() -> parkUnpark.print("b", t3));
+        t3 = new Thread(() -> parkUnpark.print("c", t1));
+        t1.start();
+        t2.start();
+        t3.start();
+
+        LockSupport.unpark(t1);
+    }
+}
+
+class ParkUnpark {
+    private int loopNumber;
+
+    public ParkUnpark(int loopNumber) {
+        this.loopNumber = loopNumber;
+    }
+
+    public void print(String content, Thread nextThread) {
+        for (int i = 0; i < loopNumber; i++) {
+            LockSupport.park();
+            System.out.print(content);
+            LockSupport.unpark(nextThread);
+        }
+    }
+}
+```
+
 ### 异步模式之生产者/消费者模型
 
 ##### 定义
