涉及模块：并发编程-模式篇 提交说明：共享模型之管程小结

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -2763,9 +2763,9 @@ public class Test33ReentrantLock {
    2. 思想
 
       避免线程无限制地获取锁，**防止线程死锁**
-   
+
    3. 代码实现
-   
+
       ```java
       @Slf4j(topic = "TryLock")
       public class Test34TryLock {
@@ -2796,11 +2796,11 @@ public class Test33ReentrantLock {
           }
       }
       ```
-   
+
    4. 解决哲学家就餐问题
-   
+
       核心代码
-   
+
       ```java
       class Chopstick1 extends ReentrantLock {
           private String name;
@@ -2817,7 +2817,7 @@ public class Test33ReentrantLock {
           }
       }
       ```
-   
+
       ```java
           /**
            * 吃饭
@@ -2844,9 +2844,9 @@ public class Test33ReentrantLock {
               }
           }
       ```
-   
+
       所有代码
-   
+
       ```java
       public class Test35PhilosopherEat {
           public static void main(String[] args) {
@@ -2926,30 +2926,30 @@ public class Test33ReentrantLock {
           }
       }
       ```
-   
+
    ##### 公平锁
-   
+
    ReentrantLock 默认是不公平的
-   
+
    ##### 条件变量
-   
+
    1. synchronized条件变和ReentrantLock 的条件变量区别
-   
+
       ReentrantLock 的条件变量相比较于synchronized条件变量最大的区别在于，**它支持多个条件变量**。可以理解为synchronized中那些条件不满足的线程都在一个休息室休息；然而ReentrantLock 支持多间休息室，有专门的等烟休息室，专门的等外卖的休息室。在唤醒线程的时候也是按照**休息室为单位**进行唤醒的
-   
+
    2. ReentrantLock 的条件变量使用方法
-   
+
       1. 在使用await方法之前需要先获得锁
       2. await方法执行之后会释放锁，进入Condition休息室等待
       3. await线程被唤醒/打断/超时会重新竞争lock锁
       4. 竞争lock锁成功之后，会从await之后继续执行
-   
+
    3. 条件变量使用场景
-   
+
       **使用await、signal方法可以实现多个线程之间的调度**
-   
+
    4. 代码实现
-   a
+      a
       ```java
       @Slf4j(topic = "AwaitSignal")
       public class Test36AwaitSignal {
@@ -3019,7 +3019,7 @@ public class Test33ReentrantLock {
           }
       }
       ```
-   
+
       ```java
       11:07:51.277 [小南] INFO AwaitSignal - 烟送到没有:false
       11:07:51.282 [小南] INFO AwaitSignal - 没有烟，休息一下
@@ -3030,13 +3030,82 @@ public class Test33ReentrantLock {
       11:07:53.278 [送外卖的] INFO AwaitSignal - 外卖送到了...
       11:07:53.278 [小女] INFO AwaitSignal - 等到外卖了，开始工作
       ```
-   
-   
+
+
    ##### 同步模式之顺序控制
-   
+
    #### 本章小节
 
+   1. 分析多线程访问共享资源时，哪些代码属于临界区代码（既有读操作、又有写操作）。
 
+      多线程操作临界区代码会出现线程安全问题，这个时候可以用synchronized或者reentrantLock机制保证线程安全问题
 
+   2. 使用synchronized互斥机制解决临界区代码线程安全问题
 
+      > synchronized获得不到锁，则就会一直进入等待阻塞状态
 
+      1. 掌握synchronized锁对象的语法
+
+      2. 掌握synchronized加在成员方法上、静态方法上语法
+
+         加在成员方法上锁的是this对象
+
+         加在静态方法锁的是Object.class类对象
+
+      3. 掌握wait/notify同步方法
+
+         **互斥**保障的是同一时刻只能有一个线程操作临界区代码，保证的是临界区代码的原子性（不会因为上下文切换出现线程安全问题）
+
+         **同步**机制：某一个条件不满足时，线程1进入等待阻塞状态，直到条件满足（其他线程改变了线程1的运行条件）则继续向下运行
+
+   3. 使用reentrantLock工具解决临界区线程安全问题
+
+      > 相比较于synchronized，功能更加强大
+
+      1. 可打断
+
+         在获取不到锁时会进入等待阻塞状态，这个时候可以等待状态可以被打断，不会死等
+
+      2. 锁超时
+
+         在规定的使劲范围内如果获取不到锁，则线程运行结束，不会出现死等的情况
+
+      3. 公平锁
+
+         reentrantLock支持公平锁、非公平锁的支持
+
+      4. 条件变量
+
+         reentrantLock相比较于synchronized可有多个条件变量，可以使指定的线程进入不同的休息室，在唤醒线程时也是以条件变量为粒度进行唤醒的
+
+   4. 了解线程活跃性问题
+
+      死锁、活锁、饥饿
+
+   5. 应用方面
+
+      1. 互斥：使用synchronized或者reentrantLock可以达到共享资源的互斥效果
+      2. 同步：使用wait/nofity或者lock的条件变量来达到线程之间调度效果
+
+   6. 原理方面
+
+      1. monitor、synchronized、wait/notify 原理
+      2. synchronized进阶原理（锁升级过程）
+      3. park & unpark 原理
+
+   7. 模式方面
+
+      1. 同步模式之保护性暂停
+
+         **两个线程之间传递结果**
+
+      2. 同步模式是生产者消费者
+
+         多个线程之间结果的获取（不是一一对应关系）
+
+      3. 同步模式之控制线程执行顺序
+
+         1. 固定顺序执行
+         2. 多个线程交替执行
+
+      
