涉及模块：共享模型之内存 提交说明：可见性和原子性

--- a/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
+++ b/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
@@ -24,5 +24,26 @@ JMM主要体现在以下三个方面
 
    保证指令不会受CPU指令并行优化的影响
 
+##### 子线程退出循环失败
+
+```java
+@Slf4j(topic = "Test1")
+public class Test1 {
+
+    private static boolean flag = true;
+    public static void main(String[] args) throws InterruptedException {
+        new Thread(() -> {
+            while (flag) {
+                log.info("子线程执行");
+            }
+        }).start();
+
+        TimeUnit.SECONDS.sleep(1);
+        log.info("主线程停止子线程");
+        flag = false;
+    }
+}
+```
+
 
 
