涉及模块：共享模型之内存 提交说明：内存可见性

--- a/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
+++ b/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
@@ -24,6 +24,8 @@ JMM主要体现在以下三个方面
 
    保证指令不会受CPU指令并行优化的影响
 
+#### ·
+
 ##### 子线程退出循环失败
 
 ```java
@@ -45,5 +47,27 @@ public class Test1 {
 }
 ```
 
+##### 原因分析
 
+1. 初始状态，T线程从主内存中读取run的值到工作内存
+
+   <img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/主内存.619i5em0dug0.png" alt="主内存" style="zoom: 50%;" />
+
+2. 因为T线程要频繁从主存中读取run的值，JIT编译器会将run值得缓存到自己的高速缓存中，用以减少对主存的访问，提高效率
+
+   <img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/线程私有内存(高速缓存).53hkljs9re80.png" alt="线程私有内存(高速缓存)" style="zoom:50%;" />
+
+3. 1s之后，main线程修改了run的值，并且同步至主存。但是这个时候T线层还是从自己的工作内存中读取值，结果永远是旧值
+
+   <img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/主存和私有内存数据不一致.554uidltyxc0.png" alt="主存和私有内存数据不一致" style="zoom:50%;" />
+
+##### 解决方式
+
+使用volatile关键字
+
+他可以用来修饰**成员变量**和**静态成员**变量，可以避免线程从自己的工作内存中查找自己变量的值，必须到主存中获取数值。线程操作volatile变量都是直接操作主存中的值
+
+##### 可见性和原子性
+
+前面例子中体现的是可见性问题，他保证的是多个线程之间，一个线程volatile变量的修改对另外一个线程是可见的。但是不能抱着原子性，仅仅用在一个写线程和多个读线程的情况上
 
