设计文件：Java并发编程 提交说明：同步模式之Balking犹豫模式

--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -457,6 +457,37 @@ public class Test24GuardObject {
 
 **主线程创建了三个people，也即创建了三个线程、三个mail对象，三个线程加的是三把不同的锁对象**
 
+### 同步模式之Balking犹豫模式
+
+##### 犹豫模式概念
+
+Balking（犹豫）模式用在当前线程发现了其他线程已经在做某一件事情，则当前线程就无需在做同样的事情，直接返回
+
+##### 代码实现
+
+```java
+public class MonitorService{
+    
+    // 用来表示是否有监控线程已经在启动执行了
+    private volatile boolean starting;
+    
+    public void start(){
+        log.info("尝试启动监控线程...");
+        synchronized (this) {
+            if (starting) {
+                return;
+            }
+            starting = true;
+        }
+        // 真正启动监控线程...
+    }
+}
+```
+
+##### 注意事项
+
+直接使用`volatile`关键字修饰`starting`只能保证其内存可见性，并不能保证**starting读写代码块**的原子性，多个线程进入临界区还会出现同时创建多个监控线程的现象。所以需要使用`synchronized`关键字保证临界区代码的互斥性
+
 ### 同步模式之线程顺序控制（线程调度）
 
 #### 固定运行顺序
