设计文件：Java并发编程 提交说明：Balking犹豫模式应用场景

--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -488,6 +488,32 @@ public class MonitorService{
 
 直接使用`volatile`关键字修饰`starting`只能保证其内存可见性，并不能保证**starting读写代码块**的原子性，多个线程进入临界区还会出现同时创建多个监控线程的现象。所以需要使用`synchronized`关键字保证临界区代码的互斥性
 
+##### 应用场景
+
+balking由于模式可以从来实现线程安全的单例类
+
+```java
+final class Singleton {
+    // 私有构造方法
+    private Singleton () {
+
+    }
+
+    private static Singleton INSTANCE = null;
+
+    public static synchronized Singleton getInstance() {
+        // 如果INSTANCE不是null，则表明其他线程已经创建好了，直接返回即可
+        if (INSTANCE != null) {
+            return INSTANCE;
+        }
+        INSTANCE = new Singleton();
+        return INSTANCE;
+    }
+}
+```
+
+对比保护性暂停模式：保护性暂停模式用在一个线程等待另一个线程的执行结果，当条件不满足时线程等待
+
 ### 同步模式之线程顺序控制（线程调度）
 
 #### 固定运行顺序
