--- a/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
+++ b/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
@@ -69,3 +69,6 @@ public class Test1 {
 
 前面例子中体现的是可见性问题，他保证的是多个线程之间，一个线程volatile变量的修改对另外一个线程是可见的。但是不能抱着原子性，仅仅用在一个写线程和多个读线程的情况上
 
+##### ❗模式之两阶段终止
+
+##### ❗模式 Balking
