技 术 栈：并发编程 提交说明：指令并行运行名词解释

--- a/doc/Java并发编程/并发编程-原理篇.md
+++ b/doc/Java并发编程/并发编程-原理篇.md
@@ -2,6 +2,52 @@
 
 ### 指令级并行原理
 
+#### 1.名词
+
+##### Clock Cycle Time
+
+主频的概念大家接触的比较多，而CPU的Clock Cycle Time（时钟周期时间）,等于主频的倒数，意思是**CPU能够识别的最小时间单位**，比如说4G主频的Clock Cycle Time就是0.25 ns，作为对比，我们墙上挂的时钟的Cycle Time为1s
+
+应用：运行一条加法指令一般需要一个时钟周期
+
+##### CPI
+
+有的指令需要更多的时钟周期时间运行，所以引入了Cycle Per Instruction指令平均时钟周期
+
+##### IPC
+
+Instruction Per Clock Cycle即CPI的倒数，表示每个时钟周期可以运行的指令数
+
+##### CPU执行时间
+
+程序的CPU执行时间，即我们前面提到的user + system时间，可以用下面公式来表示
+
+```shell
+程序CPU执行时间 = 指令数 * CPI *  Clock Cycle Time
+```
+
+#### 2.鱼罐头故事
+
+加工一条鱼需要50分钟，只能一条鱼一条鱼顺序加工（**同一条鱼当前加工步骤必须等到上一个步骤执行结束才可以执行**）
+
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/顺序加工一条鱼.4esxn6eto8w0.png" alt="顺序加工一条鱼" style="zoom:50%;" />
+
+为了提高工作效率，我们可以将每个加工鱼罐头流程细分为五个步骤
+
+1. 去鳞清洗10分钟
+2. 蒸煮沥水10分钟
+3. 加注汤料10分钟
+4. 杀菌出锅10分钟
+5. 真空封罐10分钟
+
+
+
+#### 3.指令重排序优化
+
+#### 4.支持流水线的处理器
+
+#### 5.SuperScalar 处理器
+
 ### CPU缓存结构原理
 
 ### Volatile原理
