技 术 栈：并发编程 提交说明：诡异的结果

--- a/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
+++ b/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
@@ -72,3 +72,133 @@ public class Test1 {
 ##### ❗模式之两阶段终止
 
 ##### ❗模式 Balking
+
+#### 有序性
+
+##### ❗原理之指令级并行运行
+
+##### 诡异的结果
+
+```java
+int num = 0;
+boolean ready = false;
+
+// 线程1 执行此方法
+public void actor1(I_Result r) {
+    if(ready) {
+        r.r1 = num + num;
+    } else {
+        r.r1 = 1;
+    }
+}
+// 线程2 执行此方法
+public void actor2(I_Result r) {
+    num = 2;
+    ready = true;
+}
+```
+
+I_Result 是一个对象，有一个属性 r1 用来保存结果，问，可能的结果有几种？
+
+1. 情况1：线程1 先执行，这时 ready = false，所以进入 else 分支结果为 1
+2. 线程2 先执行 num = 2，但没来得及执行 ready = true，线程1 执行，还是进入 else 分支，结果为1
+3. 线程2 执行到 ready = true，线程1 执行，这回进入 if 分支，结果为 4（因为 num 已经执行过了）
+
+但我告诉你，结果还有可能是 0 ，信不信吧！
+
+这种情况下是：线程2 先执行 ready = true（**指令重排**），切换到线程1，进入 if 分支，相加为 0，再切回线程2 执行 num = 2
+
+这种现象叫做指令重排，是 JIT 编译器在运行时的一些优化，这个现象需要通过大量测试才能复现：
+
+借助 java 并发压测工具 jcstress
+
+```shell
+mvn archetype:generate -DinteractiveMode=false -DarchetypeGroupId=org.openjdk.jcstress -
+DarchetypeArtifactId=jcstress-java-test-archetype -DarchetypeVersion=0.5 -DgroupId=cn.itcast -
+DartifactId=ordering -Dversion=1.0
+```
+
+创建 maven 项目，提供如下测试类
+
+```java
+import org.openjdk.jcstress.annotations.*;
+import org.openjdk.jcstress.infra.results.I_Result;
+
+@JCStressTest
+@Outcome(id = {"1", "4"}, expect = Expect.ACCEPTABLE, desc = "ok")
+@Outcome(id = "0", expect = Expect.ACCEPTABLE_INTERESTING, desc = "!!!!")
+@State
+public class ConcurrencyTest {
+
+    int num = 0;
+    boolean ready = false;
+
+    @Actor
+    public void actor1(I_Result r) {
+        if(ready) {
+            r.r1 = num + num;
+        } else {
+            r.r1 = 1;
+        }
+    }
+    @Actor
+    public void actor2(I_Result r) {
+        num = 2;
+        ready = true;
+    }
+}
+```
+
+执行
+
+```java
+mvn clean install
+java -jar target/jcstress.jar 
+```
+
+会输出我们感兴趣的结果，摘录其中一次结果：
+
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/指令重排序结果.5hhie7gqjkw0.png" alt="指令重排序结果" style="zoom:50%;" />
+
+可以看到，出现结果为 0 的情况有 638 次，虽然次数相对很少，但毕竟是出现了
+
+##### 解决方法
+
+volatile 修饰的变量，可以禁用指令重排
+
+```java
+import org.openjdk.jcstress.annotations.*;
+import org.openjdk.jcstress.infra.results.I_Result;
+
+@JCStressTest
+@Outcome(id = {"1", "4"}, expect = Expect.ACCEPTABLE, desc = "ok")
+@Outcome(id = "0", expect = Expect.ACCEPTABLE_INTERESTING, desc = "!!!!")
+@State
+public class ConcurrencyTest {
+
+    int num = 0;
+    volatile boolean ready = false;
+
+    @Actor
+    public void actor1(I_Result r) {
+        if(ready) {
+            r.r1 = num + num;
+        } else {
+            r.r1 = 1;
+        }
+    }
+    @Actor
+    public void actor2(I_Result r) {
+        num = 2;
+        ready = true;
+    }
+}
+```
+
+
+
+##### happens-before
+
+##### ❗原理之volatile
+
+##### ❗模式之线程安全的案例模式
