技 术 栈：并发编程 提交说明：如何保证可见性

--- a/doc/Java并发编程/并发编程-原理篇.md
+++ b/doc/Java并发编程/并发编程-原理篇.md
@@ -82,6 +82,45 @@ int b = a - 20; // 指令2
 
 ### Volatile原理
 
+volatile的底层实现原理是内存屏障，memory barrier（memory Fence）
+
+1. 对volatile变量的写指令之后的指令会加入写屏障中，之前的对所有共享变量的改动都会同步到主存当中
+2. 对volatile变量的读指令**之后**会加入读屏障
+
+##### 如何保证可见性
+
+写屏障（sfence）保证在该屏障之前的，对共享变量的改动，都同步到主存当中
+
+```java
+public void actor2(I_Result r) {
+    num = 2;
+    ready = true; // ready变量用volatile关键字修饰
+    // 写屏障
+}
+```
+
+读屏障（lfence）保障在该读屏障之后，对共享变量的读取，加载的是主存中最新的数据
+
+```java
+public void actor1(I_Result r) {
+    // 读屏障
+    // ready变量用volatile关键字修饰
+    if(ready) {
+        r.r1 = num + num;
+    } else {
+        r.r1 = 1;
+    }
+}
+```
+
+
+
+##### 如何保证有序性
+
+#####  double-checked locking 问题
+
+##### double-checked locking 解决
+
 ### Final原理
 
 ### Monitor原理
