技 术 栈：并发编程 提交说明：double-checked locking 问题

--- a/doc/Java并发编程/并发编程-原理篇.md
+++ b/doc/Java并发编程/并发编程-原理篇.md
@@ -113,11 +113,105 @@ public void actor1(I_Result r) {
 }
 ```
 
-
-
 ##### 如何保证有序性
 
-#####  double-checked locking 问题
+写屏障会确保指令重排序时，不会将写屏障之前的代码重新排序到写屏障之后
+
+```java
+public void actor2(I_Result r) {
+    num = 2;
+    ready = true; // ready变量用volatile关键字修饰
+    // 写屏障
+    // num = 2; 不会出现在这个位置
+}
+```
+
+读屏障会确保指令重排序时，不会使读屏障之后代码重新排序到读屏障之前
+
+```java
+public void actor1(I_Result r) {
+    // r.r1 = num + num; 不会出现在这里
+    // 读屏障
+    // ready变量用volatile关键字修饰
+    if(ready) {
+        r.r1 = num + num;
+    } else {
+        r.r1 = 1;
+    }
+}
+```
+
+**但是volatile关键字不能解决指令交错的问题**
+
+1. 写屏障仅仅是保证之后的读，读取到的是最新的结果，不能保证别的线程跑到该屏障之前读
+2. 而有序性的保障也保证的是本线程内的相关代码不能被重排序，线程之间的指令交错无法保证
+
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/无法解决指令交错问题.1jbg7tz4ulds.png" alt="无法解决指令交错问题" style="zoom:50%;" />
+
+##### double-checked locking 问题
+
+以著名的double-checked locking单例模式为例
+
+```java
+public class Singleton {
+    private Singleton() {}
+    private static Singleton INSTANCE = null;
+    
+    public static Singleton getInstance() {
+        // 双重检查锁
+        if (INSTANCE == null) {
+            // 多线程首次访问会进入同步代码块，之后再次访问，由于INSTANCE被赋值，直接返回
+            synchronized (Singleton.class) {
+                if (INSTANCE == null) {
+                    INSTANCE = new Singleton();
+                }
+            }
+        }
+        return INSTANCE;
+    }
+}
+
+```
+
+以上实现特点是：
+
+1. 懒惰实例化
+2. 首次调用`getInstance`才会进入`synchronized同步代码块`，之后再次调用直接返回INSTANCE对象，可提高程序性能
+3. 有隐含关键的一点：第一个`if语句`使用了`INSTANCE变量`是在`synchronized同步代码块`之外的，所以这个地方可能会发生**指令重排**，程序的有序性得不到保障
+
+所以在多线程环境下，上面的代码是有问题的，`getInstance方`法对应的字节码为
+
+```shell
+0: getstatic #2             // Field INSTANCE:Lcn/itcast/n5/Singleton;
+3: ifnonnull 37
+6: ldc #3                   // class cn/itcast/n5/Singleton
+8: dup
+9: astore_0
+10: monitorenter
+11: getstatic #2             // Field INSTANCE:Lcn/itcast/n5/Singleton;
+14: ifnonnull 27
+17: new #3                   // class cn/itcast/n5/Singleton
+20: dup
+21: invokespecial #4         // Method "<init>":()V
+24: putstatic #2             // Field INSTANCE:Lcn/itcast/n5/Singleton;
+27: aload_0
+28: monitorexit
+29: goto 37
+32: astore_1
+33: aload_0
+34: monitorexit
+35: aload_1
+36: athrow
+37: getstatic #2             // Field INSTANCE:Lcn/itcast/n5/Singleton;
+40: areturn
+```
+
+其中关键字节码指令如下：
+
+- 17行：表示创建对象，将对象引用入栈
+- 20行：表示复制一份对象的引用
+- 21行：表示利用一个对象的应用，调用构造方法
+- 24行：表示利用一个对象的应用，赋值给static INSTANCE
 
 ##### double-checked locking 解决
 
