--- a/doc/Java并发编程/并发编程-原理篇.md
+++ b/doc/Java并发编程/并发编程-原理篇.md
@@ -170,7 +170,6 @@ public class Singleton {
         return INSTANCE;
     }
 }
-
 ```
 
 以上实现特点是：
@@ -214,6 +213,28 @@ public class Singleton {
 - 24行：表示利用一个对象的应用，赋值给static INSTANCE
 
 ##### double-checked locking 解决
+
+```java
+public class Singleton {
+    private Singleton() {}
+    private static volatile Singleton INSTANCE = null;
+    
+    public static Singleton getInstance() {
+        // 实例没创建，才会进入内部的 synchronized代码块
+        if (INSTANCE == null) {
+            synchronized (Singleton.class) {
+                // 也许有其它线程已经创建实例，所以再判断一次
+                if (INSTANCE == null) {
+                    INSTANCE = new Singleton();
+                }
+            }
+        }
+        return INSTANCE;
+    }
+}
+```
+
+
 
 ### Final原理
 
