技 术 栈：并发编程 提交说明：happens-before规则

--- a/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
+++ b/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
@@ -197,6 +197,71 @@ public class ConcurrencyTest {
 
 ##### happens-before
 
+happens-before规定了一个线程的写操作对其他线程的读操作可见，它是可见性和有有序性的一套规则的总结。但是抛开happens-before原则，JMM并不能保证一个线程对共享变量的写操作对其他线程的读操作可见
+
+线程解锁m之前对变量的写，对于接下来对m加锁的其他线程的读可见
+
+```java
+static int x;
+static Object m = new Object();
+
+new Thread(()->{
+    synchronized(m) {
+        x = 10;
+    }
+},"t1").start();
+
+new Thread(()->{
+    synchronized(m) {
+        System.out.println(x);
+    }
+},"t2").start();
+```
+
+线程对volatile变量的写，对接下来其他线程对该变量的读是可见的
+
+```java
+volatile static int x;
+
+new Thread(()->{
+    // 将变量的值写到主存中
+    x = 10;
+},"t1").start();
+
+new Thread(()->{
+   // 从主从中读取变量
+   System.out.println(x);
+},"t2").start();
+```
+
+线程start之前对变量的写，对该线程启动之后对变量的读是可见的
+
+```java
+static int x;
+
+x = 10;
+
+new Thread(()->{
+	 System.out.println(x);
+},"t2").start();
+```
+
+线程结束之前对变量的写，对其他线程得知他结束之后的读可见
+
+```java
+static int x;
+
+Thread t1 = new Thread(()->{
+	 x = 10;
+},"t1");
+
+t1.start();
+t1.join();
+System.out.println(x);
+```
+
+
+
 ##### ❗原理之volatile
 
 ##### ❗模式之线程安全的案例模式
