技 术 栈：并发编程 提交说明：balking模式习题

--- a/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
+++ b/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
@@ -260,8 +260,35 @@ t1.join();
 System.out.println(x);
 ```
 
-
-
 ##### ❗原理之volatile
+
+##### 习题
+
+1. balking模式习题
+
+   期望`doInit()`在多线程环境下只能执行一次，下面这种实现方式是否有问题？为什么？
+
+   ```java
+   public class VolatileTest {
+       private volatile boolean initState = false;
+       
+       void init() {
+           if(initState) {
+               return;
+           }
+           // 在多线程环境下，可能有多个线程执行doInit方法，和预期结果不符
+           doInit();
+           initState = true;
+       }
+       
+    	private void doInit() {
+           
+       }   
+   }
+   ```
+
+   ​	
+
+2. 线程安全单例习题
 
 ##### ❗模式之线程安全的案例模式
