--- a/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
+++ b/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
@@ -262,33 +262,143 @@ System.out.println(x);
 
 ##### ❗原理之volatile
 
-##### 习题
+##### balking模式习题
 
-1. balking模式习题
+期望`doInit()`在多线程环境下只能执行一次，下面这种实现方式是否有问题？为什么？
 
-   期望`doInit()`在多线程环境下只能执行一次，下面这种实现方式是否有问题？为什么？
+```java
+public class VolatileTest {
+    private volatile boolean initState = false;
+    
+    void init() {
+        if(initState) {
+            return;
+        }
+        // 在多线程环境下，可能有多个线程执行doInit方法，和预期结果不符
+        doInit();
+        initState = true;
+    }
+    
+ 	private void doInit() {
+        
+    }   
+}
+```
+
+**`volatile`只能保证共享变量的可见性，不能保证同步代码块的原子性，所以`volatile`只适合应用在一个线程做写操作，其他线程做读操作的情况**
+
+##### ❗线程安全单例习题
+
+单例模式有很多实现方式，懒汉式、饿汉式、静态内部类、枚举类都可以实现单例模式。试分析以下单例模式的实现方式调用时的线程安全性`getInstance`方法，并思考注释中的问题
+
+> 饿汉式：类加载就会导致该单实例对象被创建 
+>
+> 懒汉式：类加载不会导致该单实例对象被创建，而是首次使用该对象时才会创建
+
+1. 饿汉式
 
    ```java
-   public class VolatileTest {
-       private volatile boolean initState = false;
-       
-       void init() {
-           if(initState) {
-               return;
-           }
-           // 在多线程环境下，可能有多个线程执行doInit方法，和预期结果不符
-           doInit();
-           initState = true;
+   // 问题1：为什么加 final
+   // 添加final关键字防止Singleton 子类破坏掉原来的父类结构
+   // 问题2：如果实现了序列化接口, 还要做什么来防止反序列化破坏单例
+   public final class Singleton implements Serializable {
+       // 问题3：为什么设置为私有? 是否能防止反射创建新的实例?
+       // 设置私有方法防止其他类无限制创建Singleton 对象
+       // 不能通过反射创建Singleton 新的实例
+       private Singleton() {}
+       // 问题4：这样初始化是否能保证单例对象创建时的线程安全?
+       // 静态成员变量的赋值是在类加载阶段操作，这个阶段的操作都是线程安全的
+       private static final Singleton INSTANCE = new Singleton();
+       // 问题5：为什么提供静态方法而不是直接将 INSTANCE 设置为 public, 说出你知道的理由
+       // 创建单例对象可以有更多的控制（懒加载方式创建对象）、泛型封装
+       public static Singleton getInstance() {
+           return INSTANCE;
        }
-       
-    	private void doInit() {
-           
-       }   
+   	// readResolve方法可以防止反序列化破坏单例（反序列化之后会生成新的对象，而不是之前的单例对象）
+       public Object readResolve() {
+           return INSTANCE;
+       }
    }
    ```
 
-   ​	
+2. 枚举类式
 
-2. 线程安全单例习题
+   ```java
+   // 问题1：枚举单例是如何限制实例个数的
+   // INSTANCE在枚举类中实际上是一个静态成员变量
+   // 问题2：枚举单例在创建时是否有并发问题
+   // 不存在线程安全问题
+   // 问题3：枚举单例能否被反射破坏单例
+   // 不能通过反射破坏单例
+   // 问题4：枚举单例能否被反序列化破坏单例
+   // 不能通过反序列化破坏单例模式
+   // 问题5：枚举单例属于懒汉式还是饿汉式
+   // 饿汉式
+   // 问题6：枚举单例如果希望加入一些单例创建时的初始化逻辑该如何做
+   // 添加构造方法实现初始化操作
+   enum Singleton {
+    INSTANCE;
+   }
+   ```
 
-##### ❗模式之线程安全的案例模式
+3. 懒汉式
+
+   ```java
+   public final class Singleton {
+       private Singleton() { }
+       private static Singleton INSTANCE = null;
+       // 分析这里的线程安全, 并说明有什么缺点
+       // 此方法时线程安全的，但是锁的粒度太多，程序的性能太低
+       // 同时即便INSTANCE对象不为null了，以后每次调用该方法还是需要加锁，程序性能太低
+       public static synchronized Singleton getInstance() {
+           if( INSTANCE != null ){
+               return INSTANCE;
+           }
+           INSTANCE = new Singleton();
+           return INSTANCE;
+       }
+   }
+   ```
+
+   ```java
+   public final class Singleton {
+       private Singleton() { }
+       // 问题1：解释为什么要加 volatile ?
+       private static volatile Singleton INSTANCE = null;
+   
+       // 问题2：对比实现3, 说出这样做的意义
+       // 第一次调用会加锁，以后再次调用就不会加锁，保证程序的执行性能
+       public static Singleton getInstance() {
+           if (INSTANCE != null) {
+               return INSTANCE;
+           }
+           synchronized (Singleton.class) {
+               // 问题3：为什么还要在这里加为空判断, 之前不是判断过了吗
+               if (INSTANCE != null) { // t2
+                   return INSTANCE;
+               }
+               INSTANCE = new Singleton();
+               return INSTANCE;
+           }
+       }
+   }
+   ```
+
+4. 静态内部类（比较推荐的线程安全的单例模式）
+
+   ```java
+   public final class Singleton {
+       private Singleton() { }
+       // 问题1：属于懒汉式还是饿汉式
+       // 懒汉式，调用时才会触发LazyHolder类的类加载动作
+       private static class LazyHolder {
+           static final Singleton INSTANCE = new Singleton();
+       }
+       // 问题2：在创建时是否有并发问题
+       // 因为是类加载机制实现的，所以不会出现线程安全问题
+       public static Singleton getInstance() {
+           return LazyHolder.INSTANCE;
+       }
+   }
+   ```
+
