技 术 栈：并发编程 提交说明：共享模型之内存小结

--- a/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
+++ b/doc/Java并发编程/并发编程-基础篇-共享模型之内存.md
@@ -402,3 +402,26 @@ public class VolatileTest {
    }
    ```
 
+#### 本章小节
+
+1. 可见性问题
+
+   由JVM缓存优化引起的
+
+2. 有序性问题
+
+   由JVM指令重排序优化引起的
+
+3. happens-before原则
+
+4. 原理方面
+
+   CPU指令并行
+
+   volatile
+
+5. 模式方面
+
+   两阶段终止模式之volatile改进
+
+   同步模式之balking
