技 术 栈：并发编程 提交说明：CAS与Volatile

--- a/doc/Java并发编程/并发编程-基础篇-无锁并发.md
+++ b/doc/Java并发编程/并发编程-基础篇-无锁并发.md
@@ -2,15 +2,67 @@
 
 #### 本章内容
 
+1. CAS与Volatile
+2. 原子整数
+3. 原子引用
+4. 原子累加器
+5. Unsafe
+
 #### CAS与Volatile
 
-慢动作分析
+前面提到的`AtomicInteger`的解决办法，内部并没有用锁来保护共享变量的线程安全，那么它是如何实现的呢？
 
-volatile
+```java
+/**
+ * 原子类
+ */
+private static AtomicInteger balance;
 
-为什么无锁高效
+private static void withdraw(Integer amonut) {
+    // 需要不断尝试，知道成功为止
+    while (true) {
+        // 比如拿到了旧值，1000
+        int preValue = balance.get();
+        // 在这个旧值的基础上 1000 - 10 = 990
+        int next = preValue - amonut;
+        /**
+         * compareAndSet方法是原子操作的
+         * compareAndSet真实做这个检查的，在set之前，先比较preValue(线程私有内存的值) 和当前值(主存中的值)是否一致
+         * - 不一致
+         *    next作废，返回false表示失败，进入下次while循环等待重试
+         *    比如别的线程已经做了减法，当前值已经被减成了990，
+         *    那么本线程的这个减法操作失效，退出当前循环等待进入下次while循环
+         * - 一致
+         *   将next 设置为新值，返回true表示成功
+         */
+        if(balance.compareAndSet(preValue, next)) {
+            break;
+        }
+    }
+}
+```
 
-CAS特点
+其中的关键操作是`compareAndSet`，他的简称是CAS，CAS过程是必须是原子操作的
+
+**CAS核心思想：是不断尝试，直至修改共享变量成功的过程**
+
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/CAS过程.2759ohld4ev4.png" alt="CAS过程" style="zoom:50%;" />
+
+##### 慢动作分析
+
+##### volatile
+
+获取共享变量时，为了保证该共享变量的内存可见性，需要使用volatile变量修饰
+
+volatile原理：使用volatile修饰的成员变量或者静态成员变量，可以避免线程从自己私有的工作内存中读取数值，而是必须从主存中读取最新的值，并且线程操作volatile变量都是直接操作主存中的值。即一个线程对volatile变量的修改，对其他线程可见
+
+**注意：**volatil只能保证共享变量的内存可见性，但是不能保证指令交错的问题（不能保证原子性）
+
+CAS操作必须借助volatile才能读取到共享变量的最新的值来实现**比较并交换**的效果
+
+##### 为什么无锁高效
+
+##### CAS特点
 
 #### 原子整数
 
