技 术 栈：并发编程 提交说明：CAS特点

--- a/doc/Java并发编程/并发编程-基础篇-无锁并发.md
+++ b/doc/Java并发编程/并发编程-基础篇-无锁并发.md
@@ -64,11 +64,24 @@ CAS操作必须借助volatile才能读取到共享变量的最新的值来实现
 
 无锁状态下，即使发生失败重试，线程也会保持高速运行状态，没有停歇。但是对使用synchronized加了锁的线程而言在没有获取到锁的情况下，会发生上下文切换，进入阻塞状态
 
-> 当CPU时间片用完、线程状态发生转换时都会发生上下文切换
-
-
+> 当CPU时间片用完、[线程状态发生转换时都会发生上下文切换]()
 
 ##### CAS特点
+
+CAS结合volatile可以实现**无锁并发**，适用于线程数量少、多核CPU的场景下
+
+1. CAS是基于乐观锁的思想实现的
+
+   最乐观的估计，不怕别的线程修改共享变量，就算改了也没有关系，我吃点亏**再重试**一下呗
+
+2. synchronized是基于悲观锁的思想实现的
+
+   最悲观的估计，我需要防止其他线程来修改共享变量，我先上了锁，后来的线程想改都得处于等待阻塞状态。等我修改完了释放锁，你们才有机会修改
+
+3. CAS体现的是无锁并发、无阻塞并发
+
+   1. 因为没有使用synchronized，所以线程不会陷入等待阻塞状态（**时间片切换非常影响效率**），这是提升效率的因素之一
+   2. 但是如果线程竞争激烈的话，可能会导致频繁重试，反而会降低效率【
 
 #### 原子整数
 
