技 术 栈：股票入门知识 提交说明：股票交易时间

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -28,11 +28,21 @@
 
 3. 创业板（3开头的股票）
 
+   需要到证券公司开户
+
 4. 科创板（开头的股票）
 
    最低50w资金入场
 
 #### 股票交易时间
+
+股票交易时间为周一到周五的上午 09:30 - 11:30 下午13:00 - 15:00
+
+集合竞价时间
+
+09:15 - 09: 20 随便挂单，随便撤单
+
+09:20 - 09: 25 不可撤单
 
 #### 股票涨跌幅
 
