--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -46,6 +46,12 @@
 
 #### 股票涨跌幅
 
+1. 沪深A股：0和60开头的股票，涨跌幅为10%
+2. 创业板股：3开头股票，涨跌幅为20%
+3. 新股：新股第一天上市涨跌幅为44%
+4. 科创板股：68开头的股票，前五个交易日没有涨跌幅限制，后面涨跌幅是20%
+5. ST股（亏损股）：亏损股的涨跌幅是5%
+
 #### 股票分时图
 
 #### 股票K线图
