技 术 栈：股票入门知识 提交说明：分时图

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -54,6 +54,14 @@
 
 #### 股票分时图
 
+![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.7gn8ynmxafw0.png)
+
+**关键指标**
+
+1. 横轴：时间轴
+2. 左边纵轴：价格轴
+3. 右边纵轴：涨跌幅轴
+
 #### 股票K线图
 
 #### 股票交易规则
