技 术 栈：股票入门知识 提交说明：股票K线图

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -64,6 +64,15 @@
 
 #### 股票K线图
 
+![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.1qy9hj51682o.png)
+
+关键概念：
+
+1. 开盘价
+2. 收盘价
+3. 最高价
+4. 最低价
+
 #### 股票交易规则
 
 #### 看盘软件基本操作
