技 术 栈：股票入门知识 提交说明：看盘软件基本操作

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -77,9 +77,47 @@
 
 国内A股最低买1手，1手 = 100 股，也就是说我们买A股股票都是按照100股的整数倍买的
 
+目前国内A股的交易费用主要由三部分组成：
+
+1. 印花税
+
+   佣金费用为千分之一，卖的时候才收取费用，佣金费用为国家税收，全国统一价
+
+2. 过户费
+
+   深证证券交易所没有此费用，上海证券交易所的费用为成交金额的0.0002%
+
+3. 交易佣金
+
+   最高交易佣金为万3（万分之三），最低收费为5元。各家券商收费不一，开户前需要咨询清楚
+
 #### 看盘软件基本操作
 
+##### 基本操作
+
+1.  查询股票
+2. 添加自选
+3. 放大缩小K线图
+
+##### 界面讲解
+
+![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.2u0tl36truw0.png)
+
+1. 均线
+
+   比如5日均线，是这5天的收盘价相加，再除以5得到的数值
+
+2. 成交量
+
+   比如120日成交量：120天的所有成交量相加再除以120，得到的数值用线连接起来
+
+3. MACD
+
+   比较复杂，没有必要记住数值的计算方式。大概率记住曲线意义即可，当白线到黄线上面，就知道后面大概率上涨
+
 #### 股票走势讲解
+
+
 
 #### 股票支撑位和压力位
 
