技 术 栈：股票入门知识 提交说明：压力位&支撑位

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -117,9 +117,19 @@
 
 #### 股票走势讲解
 
-
+买股票我们应该尽量做到**顺势而为**，不能和大盘逆着操作，尽量做做上涨个趋势的股票
 
 #### 股票支撑位和压力位
+
+![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.1ubrngvuqpmo.png)
+
+##### 压力位
+
+当股票上涨过程中，股票快要达到上一次上涨趋势的高点时，就是压力位。可以考虑卖出股票
+
+##### 支撑位  
+
+当股票下跌过程中，股价快要下跌到上一次下跌趋势的最低位时，就是支撑位。可以考虑买入股票
 
 #### 股票突破和跌破
 
