技 术 栈：股票入门知识 提交说明：如何选股票

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -54,7 +54,7 @@
 
 #### 股票分时图
 
-![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.7gn8ynmxafw0.png)
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.7gn8ynmxafw0.png" alt="image" style="zoom:50%;" />
 
 **关键指标**
 
@@ -64,7 +64,7 @@
 
 #### 股票K线图
 
-![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.1qy9hj51682o.png)
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.1qy9hj51682o.png" alt="image" style="zoom:50%;" />
 
 关键概念：
 
@@ -101,7 +101,7 @@
 
 ##### 界面讲解
 
-![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.2u0tl36truw0.png)
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.2u0tl36truw0.png" alt="image" style="zoom:50%;" />
 
 1. 均线
 
@@ -121,7 +121,7 @@
 
 #### 股票支撑位和压力位
 
-![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.1ubrngvuqpmo.png)
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.1ubrngvuqpmo.png" alt="image" style="zoom:50%;" />
 
 ##### 压力位
 
@@ -135,11 +135,39 @@
 
 ##### 突破
 
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.4ypy6grkp0w0.png" alt="image" style="zoom: 50%;" />
+
+当股价上涨过程中，价格冲过上一次的上涨趋势的高位时，称之为突破，上涨力量很大，可以考虑买入股票
+
 ##### 跌破
+
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.4ft9n16skly0.png" alt="image" style="zoom:50%;" />
+
+当股票下跌过程中，股价下跌冲过上一次的下跌趋势低位时，称之为跌破，下跌力量很大。可以考虑卖出股票
 
 #### 股票盘口介绍
 
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.17c8uwz9byr.png" alt="image" style="zoom:50%;" />
+
 #### 股票买卖机制
 
+仓位：股市里面的资金就是仓位，比如你有100w，半仓就是50w
+
+可以输入我们想要买入的一个价格，等待成交。如果没有成交也是可以撤单的
+
+**快速买入小技巧：**直接买入当日的涨停价格，实际上按照卖盘1的价格买入的
+
 #### 如何选股票
+
+1. 基本面选股
+
+   根据股票的K线图选股
+
+2. 热点题材选股
+
+   根据目前市场的热点行情选股（5G、自动驾驶）
+
+3. 突发事件选股
+
+   根据突发事件选股（医疗器械公司）
 
