技 术 栈：无锁并发 提交说明：原子整数

--- a/doc/Java并发编程/并发编程-基础篇-无锁并发.md
+++ b/doc/Java并发编程/并发编程-基础篇-无锁并发.md
@@ -64,7 +64,7 @@ CAS操作必须借助volatile才能读取到共享变量的最新的值来实现
 
 无锁状态下，即使发生失败重试，线程也会保持高速运行状态，没有停歇。但是对使用synchronized加了锁的线程而言在没有获取到锁的情况下，会发生上下文切换，进入阻塞状态
 
-> 当CPU时间片用完、[线程状态发生转换时都会发生上下文切换]()
+> 当CPU时间片用完、线程状态发生转换时都会发生上下文切换
 
 ##### CAS特点
 
