技 术 栈：并发编程 提交说明：ABA问题(AtomicMarkableReferenc使用)

--- a/doc/Java并发编程/并发编程-基础篇-无锁并发.md
+++ b/doc/Java并发编程/并发编程-基础篇-无锁并发.md
@@ -197,9 +197,60 @@ AtomicStampedReference 可以给原子引用加上版本号，追踪原子引用
 
 ##### AtomicMarkableReference
 
-有时候应用场景是，线程A不关注共享变量被更改过了几次，而是单纯地关注是否改动过，所有就有了AtomicMarkableReference
+有时候应用场景是，线程A不关注共享变量被更改过了几次，而是单纯地关注**是否改动过**，所有就有了AtomicMarkableReference
+
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/ABA倒垃圾问题.38t0pmmom1q0.png" alt="ABA倒垃圾问题" style="zoom: 67%;" />
+
+```java
+@Slf4j(topic = "ABA")
+public class Test37ABA {
+    public static void main(String[] args) throws InterruptedException {
+
+        GarbageBag bag = new GarbageBag("装满了垃圾");
+        // 参数2 mark 可以看作一个标记，表示垃圾袋满了
+        AtomicMarkableReference<GarbageBag> ref = new AtomicMarkableReference<>(bag, true);
+        log.info("主线程 start");
+        GarbageBag reference = ref.getReference();
+        log.info("bag: {}", reference.toString());
+
+
+        new Thread(() -> {
+            log.info("打扫卫生线程... start");
+            reference.setDesc("空垃圾袋");
+            ref.compareAndSet(reference, reference, true, false);
+            log.info("bag: {}", reference.toString());
+        }, "仆人").start();
+        TimeUnit.SECONDS.sleep(1);
+        log.info("主线程想换一只垃圾袋");
+        log.info("主线程更换结果：{}", ref.compareAndSet(bag, new GarbageBag("新的垃圾袋"), true, false));
+
+    }
+}
+
+class GarbageBag {
+
+    String desc;
+
+    public GarbageBag(String desc) {
+        this.desc = desc;
+    }
+
+    public void setDesc(String desc) {
+        this.desc = desc;
+    }
+
+    @Override
+    public String toString() {
+        return super.toString() + " " + desc;
+    }
+}
+```
 
 #### 原子数组
+
+1. AtomicIntegerArray
+2. AtomicLongArray
+3. AtomicReferenceArray
 
 ##### 不安全数组
 
