--- a/doc/Java并发编程/并发编程-基础篇-无锁并发.md
+++ b/doc/Java并发编程/并发编程-基础篇-无锁并发.md
@@ -254,7 +254,93 @@ class GarbageBag {
 
 ##### 不安全数组
 
-##### 安全数组
+多线程环境下普通数组内的元素不是线程安全的
+
+```java
+    public static void main(String[] args) {
+        demo(
+                () -> new int[10],
+                array -> array.length,
+                (array, index) -> array[index] ++,
+                array -> System.out.println(Arrays.toString(array))
+        );
+        
+        demo(
+            ()-> new AtomicIntegerArray(10),
+            (array) -> array.length(),
+            (array, index) -> array.getAndIncrement(index),
+            array -> System.out.println(array)
+        );
+    }
+
+
+/**
+     * @param arraySupplier 提供数组，可以是普通数组也可以是原子数组
+     * @param lengthFun 获取数组的长度
+     * @param putConsumer 自增数组，回传array，index
+     * @param printConsumer 打印数组的方法
+     * @param <T> 泛型类型
+     */
+    private static <T> void demo(Supplier<T> arraySupplier, Function<T, Integer> lengthFun, BiConsumer<T, Integer> putConsumer, Consumer<T> printConsumer ) {
+        List<Thread> ts = new ArrayList<>();
+        T array = arraySupplier.get();
+        int length = lengthFun.apply(array);
+        for (int i = 0; i < length; i++) {
+            // 每个线程对数组作 10000 次操作
+            ts.add(new Thread(() -> {
+                for (int j = 0; j < 10000; j++) {
+                    putConsumer.accept(array, j%length);
+                }
+            }));
+        }
+        ts.forEach(Thread::start); // 启动所有线程
+        ts.forEach(t -> {
+            try {
+                t.join();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }); // 等所有线程结束
+        printConsumer.accept(array);
+    }
+```
+
+```java
+  /**
+     * supplier 提供者
+     *   特点： 无中生有
+     *   使用方式：() -> 结果
+     * function 函数
+     *   特点：函数  一个参数一个结果
+     *   使用方式：
+     *     1.Function
+     *       (参数) -> 结果
+     *     2.BiFunction
+     *       (参数1, 参数2) -> 结果
+     *  consumer 消费者
+     *    特点：一个参数，没有结果
+     *    使用方式：
+     *      1.Consumer
+     *        (参数) -> void
+     *      2.BiConsumer
+     *        (参数1, 参数2) -> void
+     */
+```
+
+##### 安全数组（原子数组）
+
+```java
+public static void main(String[] args) {
+    demo(
+        ()-> new AtomicIntegerArray(10),
+        (array) -> array.length(),
+        (array, index) -> array.getAndIncrement(index),
+        array -> System.out.println(array)
+    );
+}
+```
+
+
 
 #### 字段更新器
 
