--- a/doc/Java并发编程/并发编程-基础篇-无锁并发.md
+++ b/doc/Java并发编程/并发编程-基础篇-无锁并发.md
@@ -340,9 +340,50 @@ public static void main(String[] args) {
 }
 ```
 
-
-
 #### 字段更新器
+
+字段更新器保证的是多个线程访问同一个**对象的属性**的线程安全
+
+##### 种类
+
+1. AtomicReferenceFieldUpdater
+2. AtomicIntegerFieldUpdater
+3. AtomicLongFieldUpdater
+
+##### 使用方式
+
+利用字段更新器可以针对对象的某个域（Field）进行原子操作，只能配合volatile修饰的字段使用，否则会抛出异常
+
+```java
+Exception in thread "main" java.lang.IllegalArgumentException: Must be volatile type
+```
+
+##### 代码实现
+
+```java
+public class Test39 {
+
+    public static void main(String[] args) {
+        AtomicReferenceFieldUpdater<Student, String> fieldUpdater = AtomicReferenceFieldUpdater.newUpdater(Student.class, String.class, "name");
+        Student student = new Student();
+        boolean lucas = fieldUpdater.compareAndSet(student, null, "lucas");
+        System.out.println(student);
+    }
+}
+
+class Student {
+    volatile String name;
+
+    @Override
+    public String toString() {
+        return "Student{" +
+                "name='" + name + '\'' +
+                '}';
+    }
+}
+```
+
+
 
 #### 原子累加器
 
