技 术 栈：并发编程 提交说明: 解决日期转换的线程安全问题

--- a/doc/Java并发编程/并发编程-共享模型之不可变.md
+++ b/doc/Java并发编程/并发编程-共享模型之不可变.md
@@ -8,7 +8,65 @@
 
 ##### 问题提出
 
+由于`SimpleDateFormat`是可变类，在多线程环境不是线程安全的，并发环境下很大概率会抛异常
+
+```java
+@Slf4j(topic = "test")
+public class Test40 {
+    public static void main(String[] args) {
+        SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+        for (int i = 0; i < 10; i++) {
+            new Thread(() -> {
+                try {
+                    log.debug("{}", sdf.parse("1951-04-21"));
+                } catch (Exception e) {
+                    log.error("{}", e);
+                }
+            }).start();
+        }
+    }
+}
+```
+
+```java
+08:56:16.367 [Thread-1] DEBUG test - Tue Feb 21 00:00:00 CST 19511
+08:56:16.368 [Thread-8] ERROR test - {}
+java.lang.NumberFormatException: For input string: ".4404E1E11"
+	at sun.misc.FloatingDecimal.readJavaFormatString(FloatingDecimal.java:2043)
+	at sun.misc.FloatingDecimal.parseDouble(FloatingDecimal.java:110)
+	at java.lang.Double.parseDouble(Double.java:538)
+	at java.text.DigitList.getDouble(DigitList.java:169)
+	at java.text.DecimalFormat.parse(DecimalFormat.java:2056)
+	at java.text.SimpleDateFormat.subParse(SimpleDateFormat.java:1869)
+	at java.text.SimpleDateFormat.parse(SimpleDateFormat.java:1514)
+	at java.text.DateFormat.parse(DateFormat.java:364)
+	at com.kuhan.ops.monitor.system.ref.Test40.lambda$main$0(Test40.java:19)
+	at java.lang.Thread.run(Thread.java:748)
+```
+
 ##### 思路 - 同步锁
+
+使用`synchronized`互斥锁可以解决该问题，但是加锁效率太低
+
+```java
+@Slf4j(topic = "test")
+public class Test40 {
+    public static void main(String[] args) {
+        SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+        for (int i = 0; i < 10; i++) {
+            new Thread(() -> {
+                try {
+                    synchronized (sdf) {
+                        log.debug("{}", sdf.parse("1951-04-21"));
+                    }
+                } catch (Exception e) {
+                    log.error("{}", e);
+                }
+            }).start();
+        }
+    }
+}
+```
 
 ##### 思路 - 不可变
 
